results/SVCOMP/specgen/log-if_expr1-2024_02_27_04_39_35.txt
class if_expr1 {
  //@ ensures \result <==> x == 10;
  //@ ensures \result ==> y == 11;
  //@ ensures !\result ==> y == 9;
  public static boolean main(int x) {
    int y = x == 10 ? 11 : 9;
    if (x == 10) return y == 11;
    else return y == 9;
  }
}
/home/max/Documents/JMLGPT/tmp/if_expr1.java:3: error: cannot find symbol
  //@ ensures \result ==> y == 11;
                          ^
  symbol:   variable y
  location: class if_expr1
/home/max/Documents/JMLGPT/tmp/if_expr1.java:4: error: cannot find symbol
  //@ ensures !\result ==> y == 9;
                           ^
  symbol:   variable y
  location: class if_expr1
2 errors

class if_expr1 {
  //@ ensures \result <==> x == 10;
  public static boolean main(int x) {
    int y = x == 10 ? 11 : 9;
    if (x == 10) return y == 11;
    else return y == 9;
  }
}
/home/max/Documents/JMLGPT/tmp/if_expr1.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/if_expr1.java:2:) in method main
    else return y == 9;
         ^
/home/max/Documents/JMLGPT/tmp/if_expr1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/if_expr1.java:6:
  //@ ensures \result <==> x == 10;
      ^
2 verification failures

class if_expr1 {
  //@ ensures \result <==> x == 10;  
  public static boolean main(int x) {
    int y = x == 10 ? 11 : 9;
    if (x == 10) return y == 11;
    else return y == 9;
  }
}

/home/max/Documents/JMLGPT/tmp/if_expr1.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/if_expr1.java:2:) in method main
    else return y == 9;
         ^
/home/max/Documents/JMLGPT/tmp/if_expr1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/if_expr1.java:6:
  //@ ensures \result <==> x == 10;  
      ^
2 verification failures

class if_expr1 {
 
  public static boolean main(int x) {
    int y = x == 10 ? 11 : 9;
    if (x == 10) return y == 11;
    else return y == 9;
  }
}


